# xarm_rw_new

rw/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rw/config/: amcl_localization.yaml  camera.yaml  ekf.yaml  gz_bridge.yaml  nav_waypoints.yaml  navigation.yaml  ros2_controllers.yaml
rw/launch/: _robot_on_rwbot_gz.launch.py  display_all.launch.py  rw_application.launch.py  spawner.launch.py
rw/meshes/: back_camera.stl  base_link.stl  front_camera.stl  left_casterWheel.stl  left_wheel.stl  lidar.stl  panAndTile_kit.stl  right_casterWheel.stl  right_wheel.stl
rw/model/: robot.xacro  rwbot_with_xarm.urdf.xacro
rw/rviz/: emad.rviz  gps.rviz  moveit.rviz  rgbd.rviz  rviz.rviz
rw/rw/: chase_the_crack.py  crack_path_node.py  fake_poses.py  joy_controller.py  moveit_cartesian_planner.py  perception_gate_node.py  pose_visualizer_node.py
rw/srdf/: rwbot_macro.srdf.xacro  rwbot_with_xarm.srdf.xacro
rw/worlds/: cracked_road.world  cracked_road_02 copy.world  cracked_road_02.world  model.mtl  my_world.world  object.config  object.sdf
xarm_api/: CMakeLists.txt
xarm_controller/: CMakeLists.txt
xarm_description/: CMakeLists.txt
xarm_planner/: CMakeLists.txt
xarm_planner/include/xarm_planner/: xarm_planner.h
xarm_planner/src/: xarm_planner.cpp  xarm_planner_node.cpp
